--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
     color: #576069;
 
     width: 100%;
-    height: 1000px;
+    height: 1100px;
     display: flex;  
 }
 
@@ -130,7 +130,9 @@ main {
 #foto-perfil {
     width: 160px;
     height: 160px;
+    /* background: black; */
     border-radius: 50%;
+    display: inline-table;
 }
 
 .div-item-sidenav {
